test/trivial/deitz/vars-scopes/underscore_name.good
underscore_name.chpl:1: error: Throwaway variable '_' is not allowed in this context
underscore_name.chpl:3: error: Throwaway variable '_' is not allowed in this context
